# nes-rust

./: .gitignore  Cargo.toml  Package.swift  README.md  project.yml
.swiftpm/xcode/xcuserdata/stephenbove.xcuserdatad/xcschemes/: xcschememanagement.plist
StikEMU/: ContentView.swift  Info.plist  StikEMU-Bridging-Header.h  StikEMUApp.swift
StikEMU.xcodeproj/: project.pbxproj
StikEMU.xcodeproj/project.xcworkspace/xcuserdata/stephenbove.xcuserdatad/: UserInterfaceState.xcuserstate
cli/: Cargo.toml
cli/src/: main.rs
ios/: build_rust.sh
ios/NesRust.xcframework/: Info.plist
ios/NesRust.xcframework/ios-arm64/Headers/: NesRustBridge.h
ios/NesRust.xcframework/ios-arm64_x86_64-simulator/Headers/: module.modulemap
ios/SDL2.xcframework/ios-arm64/SDL2.framework/: Info.plist  SDL2
ios/SDL2.xcframework/ios-arm64_x86_64-simulator/SDL2.framework/: Info.plist  SDL2
ios/SDL2.xcframework/ios-arm64_x86_64-simulator/SDL2.framework/_CodeSignature/: CodeResources
ios/include/: NesRustBridge.h
src/: apu.rs  button.rs  cpu.rs  default_display.rs  display.rs  ffi.rs  joypad.rs  lib.rs  mapper.rs  memory.rs  ppu.rs  register.rs  rom.rs  save_state.rs
src/ds/: audio.rs  emulator.rs  mod.rs  rtc_backend.rs  soft_renderer_3d.rs
src/sdl_backend/: audio.rs  display.rs  input.rs  mod.rs
